2022-11-08T01:23:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3415556300 # 593
* notice: last 14d: unq all: 9 25
* notice: prev accum: outdated-unq outdated-all / unq all: 232 424 / 250 451
* notice: next accum: outdated-unq outdated-all / unq all: 233 427 / 250 452
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
* notice: removed / changed dates: [2022-10-24] / [2022-10-25]

2022-11-07T16:22:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3412112521 # 592
* notice: last 14d: unq all: 9 27
* notice: prev accum: outdated-unq outdated-all / unq all: 232 424 / 250 452
* notice: next accum: outdated-unq outdated-all / unq all: 232 424 / 250 451
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
* notice: removed / changed dates: [] / [2022-10-24]

2022-11-07T08:23:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408669237 # 591
* notice: last 14d: unq all: 9 28
* notice: prev accum: outdated-unq outdated-all / unq all: 232 424 / 250 453
* notice: next accum: outdated-unq outdated-all / unq all: 232 424 / 250 452
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
* notice: removed / changed dates: [] / [2022-10-24]

2022-11-06T16:21:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405095658 # 589
* notice: last 14d: unq all: 9 29
* notice: prev accum: outdated-unq outdated-all / unq all: 231 423 / 250 453
* notice: next accum: outdated-unq outdated-all / unq all: 232 424 / 250 453
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-23] / []

2022-11-06T01:26:00Z: