@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-08T01:23:11Z",
+  "timestamp" : "2022-11-08T16:24:35Z",
   "count_outdated" : 427,
   "uniques_outdated" : 233,
-  "count" : 452,
-  "uniques" : 250,
+  "count" : 451,
+  "uniques" : 249,
   "clones" : [
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
