@@ -1,11 +1,11 @@
 {
-  "count": 25,
+  "count": 24,
   "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-26T00:00:00Z",
