@@ -1,3 +1,11 @@
+2022-11-08T16:24:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3421276207 # 595
+* notice: last 14d: unq all: 9 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 233 427 / 250 452
+* notice: next accum: outdated-unq outdated-all / unq all: 233 427 / 249 451
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-10-25]
+
 2022-11-08T01:23:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3415556300 # 593
 * notice: last 14d: unq all: 9 25
